@@ -34,6 +34,7 @@ using Cumberland.Data.PostGIS;
 using Cumberland.Data.Shapefile;
 using Cumberland.Drawing;
 using Cumberland.Projection;
+using Cumberland.Web;
 using Cumberland.Xml.Serialization;
 
 
@@ -46,84 +47,23 @@ namespace Cumberland.TileViewerTest
 		{
 			base.OnLoad (e);
 			
-			Bitmap b = null;
-			
-			// Google tile size is 256
-			int tileSize = 256;
-
 			// clear out response
 			Response.Clear();
 			Response.ContentType = "image/png";
 
-			try
-			{
-				MapSerializer ms = new MapSerializer();
-				ms.AddDatabaseFeatureSourceType(typeof(PostGISFeatureSource));
+			MapSerializer ms = new MapSerializer();
+			ms.AddDatabaseFeatureSourceType(typeof(PostGISFeatureSource));
 
-				Map map = ms.Deserialize(Request.QueryString["map"]);
-
-				// reproject to Google's spherical mercator
-				map.Projection = ProjFourWrapper.SphericalMercatorProjection;
+			Map map = ms.Deserialize(Request.QueryString["map"]);
 			
-				// set to tile size
-				map.Width = map.Height = tileSize;
-				
-				// acquire the tile index and zoom level
-				int x = Convert.ToInt32(Request.QueryString["x"]);
-				int y = Convert.ToInt32(Request.QueryString["y"]);
-				int zoomLevel = Convert.ToInt32(Request.QueryString["zl"]);
-				
-				// calculate number of tiles across
-				int numTiles = Convert.ToInt32(Math.Pow(2, zoomLevel));
-				
-				// get projection to grab circumference
-				SphericalMercatorProjector prj = new SphericalMercatorProjector();
-				
-				// get meters/pixel resolution for zoomlevel
-				double resolution = (prj.Circumference / tileSize) / numTiles;
-				
-				// mercator origin
-				double origin = prj.Circumference/2;
+			// acquire the tile index and zoom level
+			int x = Convert.ToInt32(Request.QueryString["x"]);
+			int y = Convert.ToInt32(Request.QueryString["y"]);
+			int zoomLevel = Convert.ToInt32(Request.QueryString["zl"]);
 
-				// convert pixels to meters and translate to origin
-				map.Extents = new Rectangle((tileSize*x) * resolution - origin,
-				                            (tileSize*(numTiles-y-1)) * resolution - origin, // google tiles are top left
-				                            (tileSize*(x+1)) * resolution - origin,
-				                            (tileSize*(numTiles-y)) * resolution - origin);
-				
-				MapDrawer renderer = new MapDrawer();
-			
-				// draw our map
-				b = renderer.Draw(map);
-			}
-			catch (Exception ex)
-			{
-				System.Console.WriteLine(ex.Message);
-
-				b = new Bitmap(tileSize, tileSize);
-				
-				// draw the exception on the tile
-				using (Graphics gr = Graphics.FromImage(b))
-				{
-					string msg = ex.Message;
-					int numCharsPerRow = (tileSize) / 5;
-					int numLineBreaks = (int) Math.Ceiling(Convert.ToSingle(msg.Length) / 
-					                                       Convert.ToSingle(numCharsPerRow));
+			Cumberland.Web.TileProvider tp = new Cumberland.Web.TileProvider(map);
 	
-					for (int ii=0; ii < numLineBreaks; ii++)
-					{
-						msg = msg.Insert(ii*numCharsPerRow, "\r\n");
-					}
-
-					gr.DrawString(msg,
-					              new Font("Arial", 10, GraphicsUnit.Pixel),
-					              Brushes.Red,
-					              10, 
-					              10);
-				}
-			}
-	
-			using (b)
+			using (Bitmap b = tp.DrawTile(x, y, zoomLevel))
 			{
 				// stream out the image
 				b.Save(Response.OutputStream, ImageFormat.Png);
