@@ -61,6 +61,7 @@
     <Compile Include="MapConfigurationException.cs" />
     <Compile Include="Style.cs" />
     <Compile Include="Data\FeatureType.cs" />
+    <Compile Include="Web\TileProvider.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
